2005-02-24(jol):
	- Fix the bug ! The message was not correctly remove from the child list
	of a message. The reason is that i didn't use correctly the ecore_list functions.
	- Add some helpful functions.
	- Now we are authentifiate near the server.
	
2005-02-20(jol):
	- add egxp_message_root allowing to get the root message of a message.
	- try to fix memory leaks and a dirty segfault.
	- The segfault is always here i'm hunting it !
	- add sha1 support to use with password.
	
2005-02-19(jol):
	- Fix memory leaks
	- rename egxp_opcode_display to egxp_opcode_print
	- fix the egxp_opcode_add, when you try to add an existing element it is not added
	  and it return the good id.
	- in the xmpp/test place the egxp_free before the ecore_shutdown.
	
2005-02-18(jol):
	- Try to fix some memory leaks
	
2005-02-15(jol):
	- now it's possible to connect to a server
	- add the xmpp_auth file which should handle authentification process
	- The first step of authentification is done
	
2005-02-13(jol):
	- Add connection control inside egxp. So it's now possible to connect/disconnect 
	  and get/send message to a server.
	- Add a first support to jid (malloc and free :)
	- Add a beginning to send xmpp message.
	- Update the xmpp test example. You can only connect to a server. 
	  But the test code allow you to understand how the future will be to add 
	  jabber extension protocol.
	- Minor fix and improvement.
	- begin the xmpp part.
	- add the extension concept inside the Egxp structure
	
2005-02-12(jol):
	- factorize some code inside egxp_protocol_handler.
	- finished the protocol handler xml part.
	
2005-02-10(jol):
	- replace free statement with the EFL FREE macro
	- fix some error around the callback stuff ...
	- continue the work on egxp_protocol_handler. Now, we are able to
	get the protocol node in function of the received message.
	- add some documentation around egxp_node
	
2005-02-09(jol):