@@ -1,0 +1,8 @@
+#ifndef xmpp_im_header
+#define xmpp_im_header
+
+#include "xmpp_im_struct.h"
+#include "xmpp_im_contact.h"
+#include "xmpp_im_roster.h"
+
+#endif
